--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./dist/vue-loading.js"/>
+    <script src="./dists/build.js"></script>
   </body>
 </html>
